# routes/places.js
@@ -8,16 +8,15 @@ const {
     deletePlace
 } = require("../controllers/places");
 
+const authenticate = require("../middleware/authenticate");
+
 const router = express.Router();
 
 router.get("/", getAllPlaces);
-
 router.get("/:id", getPlaceById);
 
-router.post("/", createPlace);
-
-router.put("/:id", updatePlace);
-
-router.delete("/:id", deletePlace);
+router.post("/", authenticate, createPlace);
+router.put("/:id", authenticate, updatePlace);
+router.delete("/:id", authenticate, deletePlace);
 
 module.exports = router;
